--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "lesbian.quest",
+  "workspaces": ["api", "web"],
   "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
