--- a/api/package.json
+++ b/api/package.json
@@ -7,13 +7,21 @@
 		"dev": "wrangler dev",
 		"start": "wrangler dev",
 		"test": "vitest",
-		"cf-typegen": "wrangler types"
+		"cf-typegen": "wrangler types",
+		"db:generate": "drizzle-kit generate:sqlite",
+		"db:push": "wrangler d1 migrations apply lesbian_quest_db",
+		"db:studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.7.5",
 		"@cloudflare/workers-types": "^4.20250311.0",
+		"drizzle-kit": "^0.20.14",
+		"drizzle-orm": "^0.29.3",
 		"typescript": "^5.5.2",
 		"vitest": "~3.0.7",
 		"wrangler": "^3.114.1"
+	},
+	"dependencies": {
+		"@clerk/backend": "^1.25.4"
 	}
 }
