--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.25.1",
+    "@clerk/types": "^4.49.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
