--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
+		"dev": "wrangler dev --port 8787",
 		"start": "wrangler dev",
 		"test": "vitest",
 		"cf-typegen": "wrangler types",
@@ -19,9 +19,11 @@
 		"drizzle-orm": "^0.29.3",
 		"typescript": "^5.5.2",
 		"vitest": "~3.0.7",
-		"wrangler": "^3.114.1"
+		"wrangler": "^4.3.0"
 	},
 	"dependencies": {
-		"@clerk/backend": "^1.25.4"
+		"@clerk/backend": "^1.25.4",
+		"@hono/node-server": "^1.13.8",
+		"hono": "^4.7.5"
 	}
 }
