modified the authentication and profile page

--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev --port 8787",
+		"build": "echo 'Build is not needed for Cloudflare Workers'",
 		"start": "wrangler dev",
 		"test": "vitest",
 		"cf-typegen": "wrangler types",
