--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "npm run build:web && npm run build:api",
     "build:web": "npm run build --workspace=web",
     "build:api": "npm run build --workspace=api",
+    "deploy": "npm run build && npm run deploy:web && npm run deploy:api",
+    "deploy:web": "npm run deploy --workspace=web",
+    "deploy:api": "npm run deploy --workspace=api",
     "test": "npm run test --workspaces",
     "lint": "npm run lint --workspaces"
   },
