--- a/web/package.json
+++ b/web/package.json
@@ -11,17 +11,15 @@
     "deploy": "wrangler pages deploy dist --project-name lesbian-quest-site"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.10.7",
     "@clerk/clerk-react": "^5.25.1",
     "@clerk/types": "^4.49.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@tanstack/react-query": "^5.69.0",
-    "axios": "^1.8.4",
-    "framer-motion": "^11.18.2",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@tailwindcss/vite": "^4.0.15",
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0"
+    "swr": "^2.3.3",
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
