--- a/api/wrangler.jsonc
+++ b/api/wrangler.jsonc
@@ -43,7 +43,9 @@
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
 	 */
-	"vars": {},
+	"vars": {
+		"ENVIRONMENT": "production"
+	},
 	/**
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
