--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "swr": "^2.3.3",
-    "tailwindcss": "^4.0.15"
+    "tailwindcss": "^4.0.15",
+    "tailwindcss-radix": "^4.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
