greatly improved test coverage for /api/creator/* routes

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "npm run build:web && npm run build:api",
     "build:web": "npm run build --workspace=web",
     "build:api": "npm run build --workspace=api",
-    "deploy": "npm run build && npm run deploy:web && npm run deploy:api",
+    "db:push:remote": "npm run db:push:remote --workspace=api",
+    "deploy": "npm run build && npm run deploy:web && npm run deploy:api && npm run db:push:remote",
     "deploy:web": "npm run deploy --workspace=web",
     "deploy:api": "npm run deploy --workspace=api",
     "test": "npm run test --workspaces",
