--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
 		"dev": "wrangler dev --port 8787",
 		"build": "echo 'Build is not needed for Cloudflare Workers'",
 		"start": "wrangler dev",
-		"test": "vitest",
+		"test": "vitest run",
 		"cf-typegen": "wrangler types",
 		"db:generate": "drizzle-kit generate:sqlite",
 		"db:push": "wrangler d1 migrations apply lesbian-quest-db",
