--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"@clerk/backend": "^1.25.4",
 		"@hono/node-server": "^1.13.8",
-		"hono": "^4.7.5"
+		"hono": "^4.7.5",
+		"nanoid": "^5.1.5"
 	}
 }
