Integrate @hono/clerk-auth for authentication, add adventure interactions (create, favorite, like, save) in MyAdventuresPage, and update related API routes and types. Adjust package dependencies and improve error handling.

--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
 	},
 	"dependencies": {
 		"@clerk/backend": "^1.25.4",
+		"@hono/clerk-auth": "^2.0.0",
 		"@hono/node-server": "^1.13.8",
 		"hono": "^4.7.5",
 		"nanoid": "^5.1.5"
