Add adventure state retrieval API endpoint; implement logic in InteractionsService and update tests for user interactions. Enhance MyAdventuresPage to display adventure states and integrate toast notifications for user feedback.

--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,9 @@
     "@clerk/types": "^4.49.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
