--- a/web/package.json
+++ b/web/package.json
@@ -14,15 +14,19 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.25.1",
     "@clerk/types": "^4.49.1",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
+    "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
-    "swr": "^2.3.3"
+    "reactflow": "^11.11.4",
+    "swr": "^2.3.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
