Update StoryNode and ChoiceNode interfaces for improved structure and clarity. Refactor StoryEditor to utilize useAdventureEditor for state management, enhancing node and edge handling. Integrate immer for immutable state updates and remove legacy storyStore. Update package dependencies to include immer version 10.1.1 for state management improvements.

--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@xyflow/react": "^12.4.4",
     "framer-motion": "^12.5.0",
+    "immer": "^10.1.1",
     "lucide-react": "^0.483.0",
     "nanoid": "^5.1.5",
     "react": "^19.0.0",
