--- a/api/package.json
+++ b/api/package.json
@@ -18,8 +18,8 @@
 		"@cloudflare/vitest-pool-workers": "^0.7.5",
 		"@cloudflare/workers-types": "^4.20250311.0",
 		"@types/node": "^22.13.11",
-		"drizzle-kit": "^0.20.14",
-		"drizzle-orm": "^0.29.3",
+		"drizzle-kit": "^0.30.5",
+		"drizzle-orm": "^0.41.0",
 		"typescript": "^5.5.2",
 		"vitest": "~3.0.7",
 		"wrangler": "^4.3.0"
@@ -28,6 +28,7 @@
 		"@clerk/backend": "^1.25.4",
 		"@hono/clerk-auth": "^2.0.0",
 		"@hono/node-server": "^1.13.8",
+		"@hono/zod-validator": "^0.4.3",
 		"hono": "^4.7.5",
 		"nanoid": "^5.1.5"
 	}
