--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "next": "15.3.0",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
