Update package.json to include postinstall and vercel-build scripts for Prisma generation and migration deployment.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "postinstall": "prisma generate --no-engine",
     "build": "next build",
+    "vercel-build": "prisma generate --no-engine && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint"
   },
