--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev --turbopack",
     "postinstall": "prisma generate --no-engine",
     "build": "next build",
-    "vercel-build": "prisma generate --no-engine && prisma migrate deploy && next build",
+    "vercel-build": "prisma generate --no-engine && next build && prisma migrate deploy",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.14.2",
     "@prisma/client": "^6.6.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "next": "15.3.0",
