Update .gitignore to include new directories and files for OpenNextJS and Wrangler. Modify next.config.ts to initialize OpenNext Cloudflare for development. Update package.json and package-lock.json to add new dependencies for Cloudflare and Drizzle ORM, and enhance build scripts for OpenNextJS integration.

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ next-env.d.ts
 prisma/dev.db
 prisma/dev.db-journal
 /app/generated/
+
+# opennextjs
+.open-next/
+
+# wrangler
+cloudflare-env.d.ts
