Refactor middleware to remove unnecessary empty object in clerkMiddleware. Update package.json build scripts for Cloudflare integration and remove unused Prisma files to streamline project structure. Replace Prisma client usage with Drizzle ORM in user sync logic for improved database handling.

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "npm run cf-typegen && next build",
     "prisma:generate": "prisma generate --no-engine",
     "start": "next start",
     "lint": "next lint",
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
-    "opennextjs-build": "npm run cf-typegen && opennextjs-cloudflare build",
+    "opennextjs-build": "opennextjs-cloudflare build",
     "preview": "npm run opennextjs-build && opennextjs-cloudflare preview",
     "deploy": "npm run opennextjs-build && opennextjs-cloudflare deploy",
     "upload": "npm run opennextjs-build && opennextjs-cloudflare upload"
