Remove unused files and configurations, including .gitignore entries for Next.js, middleware, and database schema. Update package.json and package-lock.json to reflect version changes and remove unnecessary dependencies. Clean up project structure by deleting components and pages related to user authentication and project management.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,29 +1,17 @@
 {
-    "$schema": "node_modules/wrangler/config-schema.json",
-    "main": ".open-next/worker.js",
     "name": "lesbian-quest",
-    "compatibility_date": "2024-12-30",
-    "compatibility_flags": ["nodejs_compat"],
-    "placement": {
-      "mode": "smart"
-    },
+    "compatibility_date": "2025-04-03",
     "assets": {
-      "directory": ".open-next/assets",
-      "binding": "ASSETS",
+        "not_found_handling": "single-page-application",
+        "run_worker_first": [
+            "/api/*"
+        ]
     },
-    "services": [
-      {
-        "binding": "WORKER_SELF_REFERENCE",
-        "service": "lesbian-quest",
-      },
-    ],
-    "d1_databases": [
-      {
-        "binding": "DATABASE",
-        "database_name": "lesbian-quest",
-        "database_id": "810c790f-8e56-4537-86cf-6d3b1d98c0f3",
-        "migrations_dir": "./drizzle",
-        "migrations_table": "drizzle_migrations",
-      },
-    ],
-  }
+    "main": "./api/index.ts",
+    "routes": [
+        {
+            "pattern": "lesbian.quest",
+            "custom_domain": "lesbian.quest"
+        }
+    ]
+}
