--- a/package.json
+++ b/package.json
@@ -1,48 +1,33 @@
 {
   "name": "lesbian.quest",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "npm run cf-typegen && next build",
-    "migrations:generate": "drizzle-kit generate",
-    "migrations:run": "npx wrangler d1 migrations apply lesbian-quest",
-    "migrations:deploy": "npx wrangler d1 migrations apply lesbian-quest --remote",
-    "start": "next start",
-    "lint": "next lint",
-    "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts",
-    "opennextjs-build": "opennextjs-cloudflare build",
-    "preview": "npm run opennextjs-build && opennextjs-cloudflare preview",
-    "deploy": "npm run opennextjs-build && opennextjs-cloudflare deploy && npm run migrations:deploy",
-    "upload": "npm run opennextjs-build && opennextjs-cloudflare upload"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "typegen": "wrangler types ./api/worker-configuration.d.ts"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.14.2",
-    "@cloudflare/workers-types": "^4.20250410.0",
-    "@opennextjs/cloudflare": "^1.0.0-beta.2",
-    "@prisma/client": "^6.6.0",
-    "@prisma/extension-accelerate": "^1.3.0",
-    "@radix-ui/react-slot": "^1.2.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "drizzle-kit": "^0.30.6",
-    "drizzle-orm": "^0.41.0",
-    "lucide-react": "^0.487.0",
-    "nanoid": "^5.1.5",
-    "next": "15.3.0",
-    "prisma": "^6.6.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.2.5",
-    "typescript": "^5",
-    "wrangler": "^4.10.0"
+    "@cloudflare/vite-plugin": "^1.10.1",
+    "@cloudflare/workers-types": "^4.20250726.0",
+    "@eslint/js": "^9.30.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.35.1",
+    "vite": "^7.0.4",
+    "wrangler": "^4.26.0"
   }
 }
