--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -11,7 +11,11 @@
     "routes": [
         {
             "pattern": "lesbian.quest",
-            "custom_domain": "lesbian.quest"
+            "custom_domain": true
         }
-    ]
+    ],
+    "observability": {
+        "enabled": true,
+        "head_sampling_rate": 1
+    }
 }
