--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,7 +10,7 @@
     "main": "./api/index.ts",
     "routes": [
         {
-            "pattern": "lesbian.quest",
+            "pattern": "subspace.quest",
             "custom_domain": true
         }
     ],
