Update wrangler.jsonc to rename the project from 'lesbian-quest' to 'subspace-quest'.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-    "name": "lesbian-quest",
+    "name": "subspace-quest",
     "compatibility_date": "2025-04-03",
     "assets": {
         "not_found_handling": "single-page-application",
