--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "typegen": "wrangler types ./api/worker-configuration.d.ts"
   },
   "dependencies": {
+    "@ts-rest/core": "^3.52.1",
+    "@ts-rest/serverless": "^3.52.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.10.1",
